--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@ header h1 { text-align: center; margin: 30px; }
 .recharts-line-curve { stroke-width: 2; }
 .recharts-cartesian-grid line { stroke: rgba(255,255,255,.2); stroke-dasharray: none; }
 .recharts-yAxis tspan, .recharts-xAxis tspan { fill: white; margin: 5px; }
+
+.custom-tooltip { overflow: hidden; background: #262b35; box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12); border-radius: 4px;}
+.custom-tooltip p { margin: 0; padding: 8px 10px; }
+.custom-tooltip .tt-label { margin: 5px 0; }
+.custom-tooltip .tt-stat { display: block; text-align: left; font-size: 1rem; font-weight: 400; }
+.custom-tooltip .tt-stat span { float: right; margin-left: 20px; }
