--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ html { background-color: #232731; color: white; }
 header h1 { text-align: center; margin: 30px; }
 
 .MuiPaper-root.card { background-color: #2e333e; color: white; padding: 1.5rem; }
-.MuiPaper-root.card h3 { font-size: 1.25rem; font-weight: 500; margin: 0; position: relative; top: -5px;}
+.card-title { font-size: 1.1rem; font-weight: 600; margin: 0; position: relative; top: -5px; letter-spacing: 1px; }
 .MuiPaper-root.card .stat { font-size: 2.25rem; display: block; text-align: right; }
 .MuiPaper-root.card .prevStat { font-size: 1rem; display: block; text-align: right; margin-top: 7px; }
 .MuiPaper-root.card .bar { width: 100%; height: 5px; margin-top: 25px; border-radius: 5px; }
