--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ footer { text-align: center; font-size: .9rem; color: rgb(207, 207, 207); margin
 footer a { color: inherit; }
 
 .MuiPaper-root.card { background-color: #2e333e; color: white; padding: 1.5rem; }
-.card-title { font-size: 1.1rem; font-weight: 600; margin: 0; position: relative; top: -5px; letter-spacing: 1px; }
+.card-title { font-size: 1.1rem; font-weight: 600; margin: 0 0 5px 0; position: relative; top: -5px; letter-spacing: 1px; }
 .MuiPaper-root.card .stat { font-size: 2.25rem; display: block; text-align: right; }
 .MuiPaper-root.card .prevStat { font-size: 1rem; display: block; text-align: right; margin-top: 7px; }
 .MuiPaper-root.card .bar { width: 100%; height: 5px; margin-top: 25px; border-radius: 5px; }
@@ -74,4 +74,8 @@ footer a { color: inherit; }
 @media screen and (max-width: 960px) {
   .infoBox { min-height: auto; }
   .radial .recharts-default-legend { top: 0; }
+}
+
+@media screen and (max-width: 600px) {
+  html { font-size: 14px; }
 }
